定義名変更

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -51,131 +51,131 @@ tile.morefood:orange_leaves.name=オレンジの木の葉 (#morefood)
 tile.morefood:plum_leaves.name=プラムの木の葉 (#morefood)
 # Food
 item.morefood:creative_hunger=クリエイティブハンガー §4(クリエイティブのみ)
-item.morefood:cooked_chicken_piece.name=調理した鶏肉の切り身 (#morefood)
-item.morefood:cooked_wedges.name=調理したウェッジ (#morefood)
-item.morefood:pepper.name=コショウ (#morefood)
-item.morefood:sparkling_water_bottle.name=炭酸水ボトル (#morefood)
-item.morefood:chicken_nugget.name=チキンナゲット (#morefood)
-item.morefood:cooked_chicken_nugget.name=調理したチキンナゲット (#morefood)
-item.morefood:netherite_apple.name=ネザライトのリンゴ (#morefood)
-item.morefood:cooked_hoglin_meat.name=調理したHoglinの肉 (#morefood)
-item.morefood:hoglin_meat.name=ホグリンの肉 (#morefood)
-item.morefood:fungus_stew.name=キノコシチュー (#morefood)
-item.morefood:nether_cookie.name=暗黒界のクッキー (#morefood)
-item.morefood:netherwart_chicken_soup.name=暗黒界ウォートの鶏肉のスープ (#morefood)
-item.morefood:netherwart_mushroom_soup.name=暗黒界ウォートのキノコスープ (#morefood)
-item.morefood:shroomlight_slices.name=カットしたきのこライト (#morefood)
-item.morefood:warped_berries.name=ゆがんだベリー (#morefood)
-item.morefood:wart_pie.name=ウォートパイ (#morefood)
-item.morefood:rotten_porkchop.name=腐ったポークチョップ (#morefood)
-item.morefood:redwhiteblue_cake.name=三色ケーキ (#morefood)
-item.morefood:rainbow_cake.name=レインボーケーキ (#morefood)
-item.morefood:chocolate_cake.name=チョコレートケーキ (#morefood)
-item.morefood:ketchup.name=トマトケチャップ (#morefood)
-item.morefood:spaghetti.name=スパゲッティ (#morefood)
-item.morefood:sashimi.name=刺身 (#morefood)
-item.morefood:onigiri.name=おにぎり (#morefood)
-item.morefood:americano.name=アメリカーノ (#morefood)
-item.morefood:bacon.name=ベーコン (#morefood)
-item.morefood:bacon_egg_muffin.name=ベーコンエッグマフィン (#morefood)
-item.morefood:bacon_egg_sandwich.name=ベーコンエッグサンドイッチ (#morefood)
-item.morefood:bat_meat.name=コウモリ肉 (#morefood)
-item.morefood:beef_sub.name=ビーフサブ (#morefood)
-item.morefood:blue_cupcake.name=青いカップケーキ (#morefood)
-item.morefood:bread_loaf.name=ローフブレッド (#morefood)
-item.morefood:breakfast_sub.name=ブレークファストサブ (#morefood)
-item.morefood:burger_bun.name=ハンバーガーのバンズ (#morefood)
-item.morefood:burrito.name=ブリトー (#morefood)
-item.morefood:butter.name=バター (#morefood)
-item.morefood:cappuccino.name=カプチーノ (#morefood)
-item.morefood:cereal.name=シリアル (#morefood)
-item.morefood:cheese_bucket.name=チーズバケツ (#morefood)
-item.morefood:cheese_toastie.name=グリルドチーズ (#morefood)
-item.morefood:cheese_wedge.name=チーズウェッジ (#morefood)
-item.morefood:chicken_fajita.name=チキンファヒータ (#morefood)
-item.morefood:chicken_select.name=チキンセレクト (#morefood)
-item.morefood:chicken_sub.name=チキンサブ (#morefood)
-item.morefood:coconut_meat.name=ココナッツの実 (#morefood)
-item.morefood:coconut_milk.name=ココナッツミルク (#morefood)
-item.morefood:cooked_bacon.name=調理したベーコン (#morefood)
-item.morefood:cooked_bat_meat.name=調理したコウモリの肉 (#morefood)
-item.morefood:cooked_hotdog_sausage.name=調理したホットドッグソーセージ (#morefood)
-item.morefood:cooked_sausage.name=調理したソーセージ (#morefood)
-item.morefood:cornflour.name=コーンフラワー (#morefood)
-item.morefood:cream_carton.name=クリームカートン (#morefood)
-item.morefood:custard.name=カスタード (#morefood)
-item.morefood:cut_bread.name=カットしたパン (#morefood)
-item.morefood:cut_fries.name=カットしたフライドポテト (#morefood)
-item.morefood:dark_chocolate.name=ダークチョコレート (#morefood)
-item.morefood:dough.name=生地 (#morefood)
-item.morefood:flour.name=小麦粉 (#morefood)
-item.morefood:fried_egg.name=目玉焼き (#morefood)
-item.morefood:fried_squid.name=調理したイカ (#morefood)
-item.morefood:fries.name=フライドポテト (#morefood)
-item.morefood:gelatin.name=ゼラチン (#morefood)
-item.morefood:hamburger.name=ハンバーガー (#morefood)
-item.morefood:hamburger_patty.name=ハンバーガーのパティ (#morefood)
-item.morefood:hops.name=ホップ (#morefood)
-item.morefood:hot_cocoa.name=ホットココア (#morefood)
-item.morefood:hot_coffee.name=ホットコーヒー (#morefood)
-item.morefood:hot_tea.name=温かい茶 (#morefood)
-item.morefood:hotdog.name=ホットドッグ (#morefood)
-item.morefood:hotdog_bun.name=ホットドッグのバンズ (#morefood)
-item.morefood:hotdog_sausage.name=ホットドッグのソーセージ (#morefood)
-item.morefood:ice_bowl.name=アイスボウル (#morefood)
-item.morefood:jam.name=ジャム (#morefood)
-item.morefood:jelly_sandwich.name=ゼリーサンドイッチ (#morefood)
-item.morefood:kebab.name=ケバブ (#morefood)
-item.morefood:macchiato.name=マキアート (#morefood)
-item.morefood:milk_carton.name=ミルクカートン (#morefood)
-item.morefood:milk_chocolate.name=ミルクチョコレート (#morefood)
-item.morefood:mocha.name=モカ (#morefood)
-item.morefood:muffin_bun.name=マフィンのバンズ (#morefood)
-item.morefood:noodles.name=麺 (#morefood)
-item.morefood:oil.name=食用油 (#morefood)
-item.morefood:orange_jelly.name=オレンジゼリー (#morefood)
-item.morefood:pancakes.name=パンケーキ (#morefood)
-item.morefood:pasta.name=パスタ (#morefood)
-item.morefood:pink_cupcake.name=ピンクのパンケーキ (#morefood)
-item.morefood:pitta_bread.name=ピタパン (#morefood)
-item.morefood:pizza.name=ピザ (#morefood)
-item.morefood:pizza_base.name=ピザ生地 (#morefood)
-item.morefood:pizza_slice.name=ピザ片 (#morefood)
-item.morefood:popcorn.name=ポップコーン (#morefood)
-item.morefood:popcorn_bucket.name=ポップコーンバケツ (#morefood)
-item.morefood:ramen_noodles.name=ラーメン (#morefood)
-item.morefood:raw_hamburger_patty.name=生のハンバーガーのパティ (#morefood)
-item.morefood:raw_sausage.name=生のソーセージ (#morefood)
-item.morefood:raw_squid.name=生のイカ (#morefood)
-item.morefood:raw_veganburger_patty.name=生のビーガンバーガーのパティ (#morefood)
-item.morefood:raw_wedges.name=生のウェッジ (#morefood)
-item.morefood:rice.name=米 (#morefood)
-item.morefood:rice_pudding.name=ミルク粥 (#morefood)
-item.morefood:round_cheese.name=丸いチーズ (#morefood)
-item.morefood:salt.name=食塩 (#morefood)
-item.morefood:sausage_egg_muffin.name=ソーセージエッグマフィン (#morefood)
-item.morefood:sausage_egg_sandwich.name=ソーセージエッグサンドイッチ (#morefood)
-item.morefood:sparkling_water_bucket.name=炭酸水バケツ (#morefood)
-item.morefood:strawberry_jelly.name=イチゴジャム (#morefood)
-item.morefood:sub_bun.name=サブバンズ (#morefood)
-item.morefood:sushi.name=寿司 (#morefood)
-item.morefood:taco.name=タコス (#morefood)
-item.morefood:tea_leaves.name=茶葉 (#morefood)
-item.morefood:toast.name=トースト (#morefood)
-item.morefood:toffee.name=タフィー (#morefood)
-item.morefood:toffee_latte.name=トフィラテ (#morefood)
-item.morefood:tomato_puree.name=トマトピューレ (#morefood)
-item.morefood:tortilla.name=トルティーヤ (#morefood)
-item.morefood:turkish_delight.name=ロクム (#morefood)
-item.morefood:vanilla_extract.name=バニラエッセンス (#morefood)
-item.morefood:vanilla_latte.name=バニララテ (#morefood)
-item.morefood:vanilla_pod.name=バニラビーンズ (#morefood)
-item.morefood:veganburger.name=ビーガンバーガー (#morefood)
-item.morefood:veganburger_patty.name=ビーガンバーガーのパティ (#morefood)
-item.morefood:waffle.name=ワッフル (#morefood)
-item.morefood:wedges_pot.name=ウェッジポット (#morefood)
-item.morefood:white_chocolate.name=ホワイトチョコレート (#morefood)
-item.morefood:yeast.name=酵母 (#morefood)
+item.morefood:cooked_chicken_piece=調理した鶏肉の切り身 (#morefood)
+item.morefood:cooked_wedges=調理したウェッジ (#morefood)
+item.morefood:pepper=コショウ (#morefood)
+item.morefood:sparkling_water_bottle=炭酸水ボトル (#morefood)
+item.morefood:chicken_nugget=チキンナゲット (#morefood)
+item.morefood:cooked_chicken_nugget=調理したチキンナゲット (#morefood)
+item.morefood:netherite_apple=ネザライトのリンゴ (#morefood)
+item.morefood:cooked_hoglin_meat=調理したHoglinの肉 (#morefood)
+item.morefood:hoglin_meat=ホグリンの肉 (#morefood)
+item.morefood:fungus_stew=キノコシチュー (#morefood)
+item.morefood:nether_cookie=暗黒界のクッキー (#morefood)
+item.morefood:netherwart_chicken_soup=暗黒界ウォートの鶏肉のスープ (#morefood)
+item.morefood:netherwart_mushroom_soup=暗黒界ウォートのキノコスープ (#morefood)
+item.morefood:shroomlight_slices=カットしたきのこライト (#morefood)
+item.morefood:warped_berries=ゆがんだベリー (#morefood)
+item.morefood:wart_pie=ウォートパイ (#morefood)
+item.morefood:rotten_porkchop=腐ったポークチョップ (#morefood)
+item.morefood:redwhiteblue_cake=三色ケーキ (#morefood)
+item.morefood:rainbow_cake=レインボーケーキ (#morefood)
+item.morefood:chocolate_cake=チョコレートケーキ (#morefood)
+item.morefood:ketchup=トマトケチャップ (#morefood)
+item.morefood:spaghetti=スパゲッティ (#morefood)
+item.morefood:sashimi=刺身 (#morefood)
+item.morefood:onigiri=おにぎり (#morefood)
+item.morefood:americano=アメリカーノ (#morefood)
+item.morefood:bacon=ベーコン (#morefood)
+item.morefood:bacon_egg_muffin=ベーコンエッグマフィン (#morefood)
+item.morefood:bacon_egg_sandwich=ベーコンエッグサンドイッチ (#morefood)
+item.morefood:bat_meat=コウモリ肉 (#morefood)
+item.morefood:beef_sub=ビーフサブ (#morefood)
+item.morefood:blue_cupcake=青いカップケーキ (#morefood)
+item.morefood:bread_loaf=ローフブレッド (#morefood)
+item.morefood:breakfast_sub=ブレークファストサブ (#morefood)
+item.morefood:burger_bun=ハンバーガーのバンズ (#morefood)
+item.morefood:burrito=ブリトー (#morefood)
+item.morefood:butter=バター (#morefood)
+item.morefood:cappuccino=カプチーノ (#morefood)
+item.morefood:cereal=シリアル (#morefood)
+item.morefood:cheese_bucket=チーズバケツ (#morefood)
+item.morefood:cheese_toastie=グリルドチーズ (#morefood)
+item.morefood:cheese_wedge=チーズウェッジ (#morefood)
+item.morefood:chicken_fajita=チキンファヒータ (#morefood)
+item.morefood:chicken_select=チキンセレクト (#morefood)
+item.morefood:chicken_sub=チキンサブ (#morefood)
+item.morefood:coconut_meat=ココナッツの実 (#morefood)
+item.morefood:coconut_milk=ココナッツミルク (#morefood)
+item.morefood:cooked_bacon=調理したベーコン (#morefood)
+item.morefood:cooked_bat_meat=調理したコウモリの肉 (#morefood)
+item.morefood:cooked_hotdog_sausage=調理したホットドッグソーセージ (#morefood)
+item.morefood:cooked_sausage=調理したソーセージ (#morefood)
+item.morefood:cornflour=コーンフラワー (#morefood)
+item.morefood:cream_carton=クリームカートン (#morefood)
+item.morefood:custard=カスタード (#morefood)
+item.morefood:cut_bread=カットしたパン (#morefood)
+item.morefood:cut_fries=カットしたフライドポテト (#morefood)
+item.morefood:dark_chocolate=ダークチョコレート (#morefood)
+item.morefood:dough=生地 (#morefood)
+item.morefood:flour=小麦粉 (#morefood)
+item.morefood:fried_egg=目玉焼き (#morefood)
+item.morefood:fried_squid=調理したイカ (#morefood)
+item.morefood:fries=フライドポテト (#morefood)
+item.morefood:gelatin=ゼラチン (#morefood)
+item.morefood:hamburger=ハンバーガー (#morefood)
+item.morefood:hamburger_patty=ハンバーガーのパティ (#morefood)
+item.morefood:hops=ホップ (#morefood)
+item.morefood:hot_cocoa=ホットココア (#morefood)
+item.morefood:hot_coffee=ホットコーヒー (#morefood)
+item.morefood:hot_tea=温かい茶 (#morefood)
+item.morefood:hotdog=ホットドッグ (#morefood)
+item.morefood:hotdog_bun=ホットドッグのバンズ (#morefood)
+item.morefood:hotdog_sausage=ホットドッグのソーセージ (#morefood)
+item.morefood:ice_bowl=アイスボウル (#morefood)
+item.morefood:jam=ジャム (#morefood)
+item.morefood:jelly_sandwich=ゼリーサンドイッチ (#morefood)
+item.morefood:kebab=ケバブ (#morefood)
+item.morefood:macchiato=マキアート (#morefood)
+item.morefood:milk_carton=ミルクカートン (#morefood)
+item.morefood:milk_chocolate=ミルクチョコレート (#morefood)
+item.morefood:mocha=モカ (#morefood)
+item.morefood:muffin_bun=マフィンのバンズ (#morefood)
+item.morefood:noodles=麺 (#morefood)
+item.morefood:oil=食用油 (#morefood)
+item.morefood:orange_jelly=オレンジゼリー (#morefood)
+item.morefood:pancakes=パンケーキ (#morefood)
+item.morefood:pasta=パスタ (#morefood)
+item.morefood:pink_cupcake=ピンクのパンケーキ (#morefood)
+item.morefood:pitta_bread=ピタパン (#morefood)
+item.morefood:pizza=ピザ (#morefood)
+item.morefood:pizza_base=ピザ生地 (#morefood)
+item.morefood:pizza_slice=ピザ片 (#morefood)
+item.morefood:popcorn=ポップコーン (#morefood)
+item.morefood:popcorn_bucket=ポップコーンバケツ (#morefood)
+item.morefood:ramen_noodles=ラーメン (#morefood)
+item.morefood:raw_hamburger_patty=生のハンバーガーのパティ (#morefood)
+item.morefood:raw_sausage=生のソーセージ (#morefood)
+item.morefood:raw_squid=生のイカ (#morefood)
+item.morefood:raw_veganburger_patty=生のビーガンバーガーのパティ (#morefood)
+item.morefood:raw_wedges=生のウェッジ (#morefood)
+item.morefood:rice=米 (#morefood)
+item.morefood:rice_pudding=ミルク粥 (#morefood)
+item.morefood:round_cheese=丸いチーズ (#morefood)
+item.morefood:salt=食塩 (#morefood)
+item.morefood:sausage_egg_muffin=ソーセージエッグマフィン (#morefood)
+item.morefood:sausage_egg_sandwich=ソーセージエッグサンドイッチ (#morefood)
+item.morefood:sparkling_water_bucket=炭酸水バケツ (#morefood)
+item.morefood:strawberry_jelly=イチゴジャム (#morefood)
+item.morefood:sub_bun=サブバンズ (#morefood)
+item.morefood:sushi=寿司 (#morefood)
+item.morefood:taco=タコス (#morefood)
+item.morefood:tea_leaves=茶葉 (#morefood)
+item.morefood:toast=トースト (#morefood)
+item.morefood:toffee=タフィー (#morefood)
+item.morefood:toffee_latte=トフィラテ (#morefood)
+item.morefood:tomato_puree=トマトピューレ (#morefood)
+item.morefood:tortilla=トルティーヤ (#morefood)
+item.morefood:turkish_delight=ロクム (#morefood)
+item.morefood:vanilla_extract=バニラエッセンス (#morefood)
+item.morefood:vanilla_latte=バニララテ (#morefood)
+item.morefood:vanilla_pod=バニラビーンズ (#morefood)
+item.morefood:veganburger=ビーガンバーガー (#morefood)
+item.morefood:veganburger_patty=ビーガンバーガーのパティ (#morefood)
+item.morefood:waffle=ワッフル (#morefood)
+item.morefood:wedges_pot=ウェッジポット (#morefood)
+item.morefood:white_chocolate=ホワイトチョコレート (#morefood)
+item.morefood:yeast=酵母 (#morefood)
 
 # Alchohol
 item.morefood:beer=ビール (#morefood)
